<resources>
    <string name="app_name">Keep</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="locationView">Location : </string>
    <string name="title_activity_nav__bar">Nav_Bar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="pick_date">Pick A Date</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="name">Full Name</string>
    <string name="prompt_password">Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_new_diary">New Diary</string>

</resources>
